--- a/index.html
+++ b/index.html
@@ -97,7 +97,25 @@
 	        </div>
 	      </div>
 	    </div>
-    </section>
+			</section>
+
+<!-- Schedule A Meeting Section -->
+<!-- moved to just above the map section -->
+<!-- Schedule A Meeting Section -->
+<section class="ftco-section" id="schedule-meeting-section">
+	<div class="container">
+		<div class="row justify-content-center mb-5 pb-3">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+				<span class="subheading">Schedule A Meeting</span>
+				<!-- You can add more content for scheduling here -->
+			</div>
+		</div>
+	</div>
+</section>
+...existing code...
+<section class="ftco-section ftco-no-pt ftco-no-pb">
+	<div id="map" class="bg-white"></div>
+</section>
 
 <script src="js/search.js"></script>
 <script>
@@ -592,16 +610,10 @@
 	    					<span class="icon-expand"></span>
 	    				</a>
     				</div>
-    			</div>
-    		</div>
-    	</div>
     </section>
 
-    <section class="ftco-intro img" style="background-image: url(images/bg_2.jpg); height: 400px; width: 100vw; margin-left: -50vw; left: 50%; position: relative; border-radius: 0;">
-    	<div class="overlay"></div>
-    </section>
 
-    <section class="ftco-section" id="restaurant-section">
+		<section class="ftco-section" id="airport-section" style="margin-bottom:0;">
 		<div class="container">
 			<div class="row justify-content-center pb-3">
 					<div class="col-md-12 heading-section text-center ftco-animate">
@@ -610,7 +622,7 @@
 						<p>Find and explore eco-friendly airports with green terminals, carbon offset programs, and traveler-focused amenities for a better journey.</p>
 					</div>
 				</div>
-    		<div class="row">
+			<div class="row">
     			<div class="col-md-6 col-lg-4 ftco-animate">
     				<div class="project">
     					<div class="img">
@@ -691,14 +703,11 @@
     						<span class="icon-expand"></span>
     					</a>
     				</div>
-    			</div>
-    		</div>
-    	</div>
+    	
     </section>
 
 
-
-    <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+	<section class="ftco-section contact-section ftco-no-pb" id="contact-section" style="margin-top:0;">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
 					<div class="col-md-7 heading-section text-center ftco-animate">
@@ -709,28 +718,27 @@
         </div>
 
         <div class="row block-9">
-          <div class="col-md-7 order-md-last d-flex">
-            <form action="#" class="bg-light p-4 p-md-5 contact-form">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
-              </div>
-              <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-              </div>
-            </form>
-          
-          </div>
+					<div class="col-md-7 order-md-last d-flex">
+						<form action="#" class="bg-light p-4 p-md-5 contact-form">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Your Name">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Your Email">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Subject">
+							</div>
+							<div class="form-group">
+								<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+							</div>
+							<div class="form-group">
+								<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+							</div>
+						</form>
+					</div>
 
-          <div class="col-md-5 d-flex">
+					<div class="col-md-5 d-flex">
           	<div class="row d-flex contact-info mb-5">
 		          <div class="col-md-12 ftco-animate">
 		          	<div class="box p-2 px-3 bg-light d-flex">
