--- a/index.html
+++ b/index.html
@@ -99,23 +99,7 @@
 	    </div>
 			</section>
 
-<!-- Schedule A Meeting Section -->
-<!-- moved to just above the map section -->
-<!-- Schedule A Meeting Section -->
-<section class="ftco-section" id="schedule-meeting-section">
-	<div class="container">
-		<div class="row justify-content-center mb-5 pb-3">
-			<div class="col-md-7 heading-section text-center ftco-animate">
-				<span class="subheading">Schedule A Meeting</span>
-				<!-- You can add more content for scheduling here -->
-			</div>
-		</div>
-	</div>
-</section>
-...existing code...
-<section class="ftco-section ftco-no-pt ftco-no-pb">
-	<div id="map" class="bg-white"></div>
-</section>
+
 
 <script src="js/search.js"></script>
 <script>
@@ -229,6 +213,27 @@
 				</div>
 			</div>
 		</section>
+		<!-- Schedule a Meeting section  -->
+		<section class="ftco-section">
+			<div class="container">
+				<div class="row justify-content-center pb-5">
+					 <div class="col-md-12 heading-section text-center ftco-animate">
+							<span class="subheading">SCHEDULE A MEETING</span>
+							   <h2 class="mb-4">Let's Meet & Get You Setup</h2>
+								 <p>Book a meeting with our team to discuss how our suite of business services can benefit your travel needs... today.</p>
+								 <!-- Cal.com Booking Embed Start -->
+								 <div style="margin: 2rem 0;">
+									 <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 1rem;">
+										 <img src="images/meeting-banner.jpg" alt="Schedule a Meeting" style="max-width: 400px; width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); margin-bottom: 1rem;" />
+										 <iframe src="https://cal.com/amicus-services-consultant/30min?layout=calendar" style="width:100%; min-width:320px; height:700px; border:none;" title="Book a 30-minute meeting with AmicuServices"></iframe>
+									 </div>
+								 </div>
+								 <!-- Cal.com Booking Embed End -->
+			  </div>
+			</div>
+			</div>
+		</section>
+		<section class="ftco-intro img" style="background-image: url(images/bg_1.jpg); height: 400px; width: 100vw; margin-left: -50vw; left: 50%; position: relative; border-radius: 0;"></section>
 
     <section class="ftco-section">
     	<div class="container">
@@ -420,105 +425,7 @@
 			</div>
 		</section>
 
-		<section class="ftco-section">
-    	<div class="container">
-    		<div class="row justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<span class="subheading">Suggested Hotel</span>
-            <h2 class="mb-4">Find Nearest Hotel</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-    		<div class="row">
-    			<div class="col-md-6 col-lg-4 ftco-animate">
-    				<div class="project">
-    					<div class="img">
-    						<div class="vr"><span>Sale</span></div>
-		    				<a href="hotel.html"><img src="images/hotel-1.jpg" class="img-fluid" alt="Colorlib Template"></a>
-	    				</div>
-	    				<div class="text">
-	    					<h4 class="price"><span class="old-price mr-2">$500</span>$400</h4>
-	    					<span>3 nights</span>
-	    					<h3><a href="hotel.html">Luxury Hotel in Greece</a></h3>
-	    					<div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-	    						<div class="float-right">
-	    							<span class="rate"><a href="#">(120)</a></span>
-	    						</div>
-	    					</div>
-	    				</div>
-	    				<a href="images/hotel-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
-    				</div>
-    			</div>
-    			<div class="col-md-6 col-lg-4 ftco-animate">
-    				<div class="project">
-    					<div class="img">
-		    				<a href="hotel.html"><img src="images/hotel-2.jpg" class="img-fluid" alt="Colorlib Template"></a>
-	    				</div>
-	    				<div class="text">
-	    					<h4 class="price">$400</h4>
-	    					<span>3 nights</span>
-	    					<h3><a href="hotel.html">Luxury Hotel in Greece</a></h3>
-	    					<div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-	    						<div class="float-right">
-	    							<span class="rate"><a href="#">(120)</a></span>
-	    						</div>
-	    					</div>
-	    				</div>
-	    				<a href="images/hotel-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
-    				</div>
-    			</div>
-    			<div class="col-md-6 col-lg-4 ftco-animate">
-    				<div class="project">
-    					<div class="img">
-		    				<a href="hotel.html"><img src="images/hotel-3.jpg" class="img-fluid" alt="Colorlib Template"></a>
-	    				</div>
-	    				<div class="text">
-	    					<h4 class="price">$400</h4>
-	    					<span>3 nights</span>
-	    					<h3><a href="hotel.html">Luxury Hotel in Greece</a></h3>
-	    					<div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-	    						<div class="float-right">
-	    							<span class="rate"><a href="#">(120)</a></span>
-	    						</div>
-	    					</div>
-	    				</div>
-	    				<a href="images/hotel-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </section>
-
-    <section class="ftco-intro img" style="background-image: url(images/bg_1.jpg); height: 400px; width: 100vw; margin-left: -50vw; left: 50%; position: relative; border-radius: 0;">
-    	<div class="overlay"></div>
-    </section>
+	
 
     <section class="ftco-section" id="beauty-wellness-section">
     	<div class="container">
