--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			</div>
 		</section>
 
-    <section class="ftco-intro img" id="destination-section" style="background-image: url(images/destination-5.jpg);">
+    <section class="ftco-intro img" id="destination-section" style="background-image: url(images/destination-single.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row justify-content-center">
@@ -705,7 +705,7 @@
     	<div class="container-fluid px-0">
     		<div class="row no-gutters">
 					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="images/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg); border-radius: 0;">
+						<a href="images/destination-5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/destination-5.jpg); border-radius: 0;">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
@@ -733,14 +733,14 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="images/gallery-5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-5.jpg); border-radius: 0;">
+						<a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg); border-radius: 0;">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="images/gallery-6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-6.jpg); border-radius: 0;">
+						<a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg); border-radius: 0;">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
