Update navbar and Information links across pages

--- a/hotel.html
+++ b/hotel.html
@@ -337,8 +337,8 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Online Enquiry</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>General Enquiry</a></li>
+				<li><a href="#schedule-meeting-section"><span class="icon-long-arrow-right mr-2"></span>Online Enquiry</a></li>
+				<li><a href="#schedule-meeting-section"><span class="icon-long-arrow-right mr-2"></span>General Enquiry</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Booking</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Privacy</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Refund Policy</a></li>
