--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	            <li class="nav-item"><a href="#destination-section" class="nav-link"><span>Destination</span></a></li>
 	            <li class="nav-item"><a href="#hotel-section" class="nav-link"><span>Hotels+Resorts+Villas</span></a></li>
 	            <li class="nav-item"><a href="#beauty-wellness-section" class="nav-link"><span>Beauty+Wellness</span></a></li>
-				<li class="nav-item"><a href="#restaurant-section" class="nav-link"><span>AmicusAirports</span></a></li>
+				<li class="nav-item"><a href="amicustransport-landing.html" class="nav-link"><span>AmicusAirports</span></a></li>
 	          </ul>
 	        </div>
 	      </div>
@@ -214,7 +214,7 @@
 			</div>
 		</section>
 		<!-- Schedule a Meeting section  -->
-		<section class="ftco-section">
+		<section class="ftco-section" id="schedule-meeting-section">
 			<div class="container">
 				<div class="row justify-content-center pb-5">
 					 <div class="col-md-12 heading-section text-center ftco-animate">
@@ -767,12 +767,12 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Online Enquiry</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>General Enquiry</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Booking</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Privacy</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Refund Policy</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Call Us</a></li>
+				<li><a href="#schedule-meeting-section"><span class="icon-long-arrow-right mr-2"></span>Online Enquiry</a></li>
+				<li><a href="#schedule-meeting-section"><span class="icon-long-arrow-right mr-2"></span>General Enquiry</a></li>
+				<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Booking</a></li>
+				<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Privacy</a></li>
+				<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Refund Policy</a></li>
+				<li><a href="#schedule-meeting-section"><span class="icon-long-arrow-right mr-2"></span>Schedule A Meeting</a></li>
               </ul>
             </div>
           </div>
