--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg); border-radius: 0;">
+						<a href="images/destination-7.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/destination-7.jpg); border-radius: 0;">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
