--- a/single.html
+++ b/single.html
@@ -34,7 +34,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav nav ml-auto">
             <li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
-            <li class="nav-item"><a href="index.html#about-section" class="nav-link"><span>About</span></a></li>
+            <li class="nav-item"><a href="amicusservices-landing.html" class="nav-link"><span>About</span></a></li>
             <li class="nav-item"><a href="index.html#services-section" class="nav-link"><span>Services</span></a></li>
             <li class="nav-item"><a href="index.html#destination-section" class="nav-link"><span>Destination</span></a></li>
             <li class="nav-item"><a href="index.html#hotel-section" class="nav-link"><span>Hotel</span></a></li>
