Update 'Book a room now' button in index.html to link to destination.html

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 					<div class="col-md-9 text-center">
 						<h2>Hotels+Resorts+Villas</h2>
 						<p>We can manage your dream building A small river named Duden flows by their place</p>
-						<p class="mb-0"><a href="hotel.html" class="btn btn-white px-4 py-3">Book a room now</a></p>
+						<p class="mb-0"><a href="destination.html" class="btn btn-white px-4 py-3">Book a room now</a></p>
 					</div>
 				</div>
 			</div>
