--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 	        </div>
 			</div>
 		</section>
+		<section class="ftco-intro img" style="background-image: url(images/bg_1.jpg); height: 400px; width: 100vw; margin-left: -50vw; left: 50%; position: relative; border-radius: 0;"></section>
 
 		<!-- Schedule a Meeting section  -->
 		<section class="ftco-section" id="schedule-meeting-section">
@@ -235,8 +236,7 @@
 			</div>
 		</section>
 		
-		<section class="ftco-intro img" style="background-image: url(images/bg_1.jpg); height: 400px; width: 100vw; margin-left: -50vw; left: 50%; position: relative; border-radius: 0;"></section>
-
+		
     <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center pb-3">
@@ -616,7 +616,7 @@
     </section>
 
 
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section" style="margin-top:0;">
+	<section class="ftco-section contact-section" id="contact-section" style="margin-top:0;">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
 					<div class="col-md-7 heading-section text-center ftco-animate">
