--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     </section>
 
 
-		<section class="ftco-section" id="airport-section" style="margin-bottom:0;">
+		<section class="ftco-section" id="airport-section">
 		<div class="container">
 			<div class="row justify-content-center pb-3">
 					<div class="col-md-12 heading-section text-center ftco-animate">
