Reduce text size for business services info sentences to match main paragraph

--- a/index.html
+++ b/index.html
@@ -153,47 +153,47 @@
 	        	<div class="col-md d-flex align-self-stretch ftco-animate">
 	            <a href="amicusdocs-landing.html" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
 	              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
-	              <div class="media-body">
-	              <h3 class="heading mb-3">AmicusDocs</h3>
-	                <p>Need help with a travel document? We provide comprehensive travel document services.</p>
-	              </div>
+				<div class="media-body">
+				<h3 class="heading mb-3">AmicusDocs</h3>
+					<p class="services-info">Need help with a travel document? We provide comprehensive travel document services.</p>
+				</div>
 	            </a>      
 	          </div>
 	          <div class="col-md d-flex align-self-stretch ftco-animate">
 	            <a href="amicustravel-landing.html" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
 	              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
-	              <div class="media-body">
-	                <h3 class="heading mb-3">AmicusTravel</h3>
-	                <p>Traveller-focused recommendations and eco-conscious trip insights.</p>
-	              </div>
+				<div class="media-body">
+					<h3 class="heading mb-3">AmicusTravel</h3>
+					<p class="services-info">Traveller-focused recommendations and eco-conscious trip insights.</p>
+				</div>
 	            </a>      
 	          </div>
 	          <div class="col-md d-flex align-self-stretch ftco-animate">
 	            <a href="amicustransport-landing.html" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
 	              <div class="icon justify-content-center align-items-center d-flex"><span class="ion-ios-airplane"></span></div>
-	              <div class="media-body">
-	                <h3 class="heading mb-3">AmicusTransport</h3>
-	                <p>Airport transfers, shuttles, and low-carbon transport options.</p>
-	              </div>
+				<div class="media-body">
+					<h3 class="heading mb-3">AmicusTransport</h3>
+					<p class="services-info">Airport transfers, shuttles, and low-carbon transport options.</p>
+				</div>
 	            </a>      
 	          </div>
 	          <div class="col-md d-flex align-self-stretch ftco-animate">
 	            <a href="amicusc02-landing.html" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
 	              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
-	              <div class="media-body">
-	                <h3 class="heading mb-3">AmicusC02</h3>
-	                <p>LCA-based carbon footprint reports for hotels and eco-conscious businesses.</p>
-	              </div>
+				<div class="media-body">
+					<h3 class="heading mb-3">AmicusC02</h3>
+					<p class="services-info">LCA-based carbon footprint reports for hotels and eco-conscious businesses.</p>
+				</div>
 	            </a>      
 	          </div>
 	          <div class="col-md d-flex align-self-stretch ftco-animate">
 	            <a href="#" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
 	              <div class="icon justify-content-center align-items-center d-flex"><span class="ion-ios-fitness"></span></div>
-	              <div class="media-body">
-	                <h3 class="heading mb-3">AmicusFitness</h3>
-	                <p>Search for fitness classes and groups in your destination.</p>
-	                <p style="color: #0ea5a4; font-weight: 600; margin-top: 10px;">(Coming Soon!)</p>
-	              </div>
+				<div class="media-body">
+					<h3 class="heading mb-3">AmicusFitness</h3>
+					<p class="services-info">Search for fitness classes and groups in your destination.</p>
+					<p style="color: #0ea5a4; font-weight: 600; margin-top: 10px;">(Coming Soon!)</p>
+				</div>
 	            </a>      
 	          </div>
 
