Link 'Book Your Service' button to schedule a meeting section in index.html

--- a/amicusdocs-landing.html
+++ b/amicusdocs-landing.html
@@ -109,7 +109,7 @@
                         </div>
 
                         <div class="text-center mt-5">
-                            <a href="docservice.html" class="btn btn-primary btn-lg">Book Your Service</a>
+                            <a href="index.html#schedule-meeting-section" class="btn btn-primary btn-lg">Book Your Service</a>
                             <p class="text-muted mt-3">Or contact us for more information</p>
                         </div>
                     </div>
