Update AmicusTravel landing: remove footer quicklinks/contact, card layout, image/edge fixes, button link

--- a/amicustravel-landing.html
+++ b/amicustravel-landing.html
@@ -66,35 +66,41 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-lg-4">
-                                <div class="services mb-4">
-                                    <h4 class="heading mb-2">Our Features:</h4>
-                                    <ul class="list-unstyled">
-                                        <li class="mb-2">✓ Eco-friendly hotel recommendations</li>
-                                        <li class="mb-2">✓ LEED-certified accommodation finder</li>
-                                        <li class="mb-2">✓ Carbon footprint calculator for trips</li>
-                                        <li class="mb-2">✓ Sustainability ratings for hotels</li>
-                                        <li class="mb-2">✓ Green travel tips and insights</li>
-                                        <li class="mb-2">✓ Personalized travel preferences</li>
-                                    </ul>
+                            <div class="col-lg-4 mb-4">
+                                <div class="card h-100 shadow-sm border-0">
+                                    <div class="card-body">
+                                        <h4 class="card-title heading mb-2">Our Features:</h4>
+                                        <ul class="list-unstyled card-text">
+                                            <li class="mb-2">✓ Eco-friendly hotel recommendations</li>
+                                            <li class="mb-2">✓ LEED-certified accommodation finder</li>
+                                            <li class="mb-2">✓ Carbon footprint calculator for trips</li>
+                                            <li class="mb-2">✓ Sustainability ratings for hotels</li>
+                                            <li class="mb-2">✓ Green travel tips and insights</li>
+                                            <li class="mb-2">✓ Personalized travel preferences</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
-                                <div class="services mb-4">
-                                    <h4 class="heading mb-2">Why Travel with AmicusTravel?</h4>
-                                    <ul class="list-unstyled">
-                                        <li class="mb-2">✓ Discover truly sustainable accommodations</li>
-                                        <li class="mb-2">✓ Understand your travel's environmental impact</li>
-                                        <li class="mb-2">✓ Support hotels committed to sustainability</li>
-                                        <li class="mb-2">✓ Easy-to-use platform and mobile app</li>
-                                        <li class="mb-2">✓ Expert eco-travel recommendations</li>
-                                    </ul>
+                            <div class="col-lg-4 mb-4">
+                                <div class="card h-100 shadow-sm border-0">
+                                    <div class="card-body">
+                                        <h4 class="card-title heading mb-2">Why Travel with AmicusTravel?</h4>
+                                        <ul class="list-unstyled card-text">
+                                            <li class="mb-2">✓ Discover truly sustainable accommodations</li>
+                                            <li class="mb-2">✓ Understand your travel's environmental impact</li>
+                                            <li class="mb-2">✓ Support hotels committed to sustainability</li>
+                                            <li class="mb-2">✓ Easy-to-use platform and mobile app</li>
+                                            <li class="mb-2">✓ Expert eco-travel recommendations</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
-                                <div class="services mb-4">
-                                    <h4 class="heading mb-2">Traveler-Focused Features:</h4>
-                                    <p>Compare hotels by their sustainability certifications, view real carbon footprint data, read reviews from other eco-conscious travelers, and get personalized recommendations based on your travel style and values. Every booking through AmicusTravel supports hotels that are genuinely committed to the planet.</p>
+                            <div class="col-lg-4 mb-4">
+                                <div class="card h-100 shadow-sm border-0">
+                                    <div class="card-body">
+                                        <h4 class="card-title heading mb-2">Traveler-Focused Features:</h4>
+                                        <p class="card-text">Compare hotels by their sustainability certifications, view real carbon footprint data, read reviews from other eco-conscious travelers, and get personalized recommendations based on your travel style and values. Every booking through AmicusTravel supports hotels that are genuinely committed to the planet.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -106,23 +112,6 @@
 
     <footer class="ftco-footer-section">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-4">
-                </div>
-                <div class="col-md-4">
-                    <h4 class="mb-4">Quick Links</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#services">Services</a></li>
-                        <li><a href="amicustravel-landing.html">Travel Solutions</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h4 class="mb-4">Contact</h4>
-                    <p>Email: amicuservices@gmail.com</p>
-                    <p>Phone: (555) 000-0001</p>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>&copy; 2026 AmicuServices. All rights reserved.</p>
