--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	    <div class="container-fluid px-0">
 	    	<div class="row no-gutters d-flex">
 	    		<div class="col-md-6 col-lg-5 d-flex">
-	    			<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
+					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about1.jpg); border-radius:0;">
 	    			</div>
 	    		</div>
 	    		<div class="col-md-6 col-lg-7 px-lg-5 py-md-5 bg-darken">
@@ -127,7 +127,7 @@
 	    				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate p-5 p-lg-0">
 		          	<span class="subheading">Smarter Stays, Greener Travels</span>
-		            <h2 class="mb-4">Get Best Travel Recommendations</h2>
+		            <h2 class="mb-4">Get Sustainable Business Travel Recommendations</h2>
 		            <p>Travelers can explore and book hotels that prioritize energy efficiency, lower emissions, and responsible practices. Hosts can generate clear carbon footprint snapshots that highlight where emissions come from and where improvements make the biggest impact.</p>
 		            <p>Whether you're choosing a stay or managing one, AmicuServices helps turn sustainability into informed action.</p>
 
