--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 	    				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate p-5 p-lg-0">
 		          	<span class="subheading">Smarter Stays, Greener Travels</span>
-		            <h2 class="mb-4">Get Sustainable Business Travel Recommendations</h2>
-		            <p>Travelers can explore and book hotels that prioritize energy efficiency, lower emissions, and responsible practices. Hosts can generate clear carbon footprint snapshots that highlight where emissions come from and where improvements make the biggest impact.</p>
-		            <p>Whether you're choosing a stay or managing one, AmicuServices helps turn sustainability into informed action.</p>
+		            <h2 class="mb-4">Sustainable Business Travel Recommendations</h2>
+		            <p>Travelers can explore and book sustainable lodging that prioritize energy efficiency, lower emissions, and responsible practices. Hosts can generate carbon footprints that highlight where emissions come from and where improvements make the biggest impact.</p>
+		            <p></p>
 
 		            <p><a href="amicustravel-landing.html" class="btn btn-primary py-3 px-4">Explore Stays</a> <a href="lca-calculator.html" class="btn btn-white py-3 px-4">Explore C02</a></p>
 		          </div>
